--- a/android/app/src/main/res/layout/genre_item.xml
+++ b/android/app/src/main/res/layout/genre_item.xml
@@ -10,7 +10,7 @@
         android:layout_margin="10dp">
 
         <TextView
-            android:id="@+id/textViewDesc"
+            android:id="@+id/tvGenreDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Genre 1"
