--- a/android/app/src/main/res/layout/fragment_features.xml
+++ b/android/app/src/main/res/layout/fragment_features.xml
@@ -25,7 +25,8 @@
             android:layout_height="40dp"
             android:padding="4dp"
             android:src="@drawable/ic_refresh"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:foreground="?android:attr/selectableItemBackground"/>
 
     </RelativeLayout>
 
