--- a/android/app/src/main/res/layout/fragment_platforms.xml
+++ b/android/app/src/main/res/layout/fragment_platforms.xml
@@ -8,7 +8,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:focusable="true">
+        <requestFocus />
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,6 +28,7 @@
             android:padding="4dp"
             android:src="@drawable/ic_refresh"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:foreground="?android:attr/selectableItemBackground"/>
 
     </RelativeLayout>
