--- a/android/app/src/main/res/layout/game_item.xml
+++ b/android/app/src/main/res/layout/game_item.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="16dp">
 
 
         <ImageView
@@ -22,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:layout_marginLeft="16dp">
 
             <TextView
                 android:id="@+id/tvTitle"
