--- a/android/app/src/main/res/layout/game_item.xml
+++ b/android/app/src/main/res/layout/game_item.xml
@@ -6,24 +6,26 @@
     android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal">
 
 
         <ImageView
             android:id="@+id/ivImage"
             android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
+            android:minHeight="120dp"
             android:src="@drawable/ic_image_placeholder" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="16dp">
+            android:layout_marginLeft="16dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvTitle"
@@ -62,9 +64,17 @@
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/tvPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_orange_dark"
+                android:text="10.00 €"/>
+
 
         </LinearLayout>
 
     </LinearLayout>
+
 
 </android.support.v7.widget.CardView>
