Add url link to game details activity

--- a/android/app/src/main/res/layout/activity_game.xml
+++ b/android/app/src/main/res/layout/activity_game.xml
@@ -172,6 +172,12 @@
             android:layout_marginTop="8dp"
             android:text="Desc" />
 
+        <Button
+            android:id="@+id/btVisitPage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/visit_webpage"/>
+
     </LinearLayout>
 
 </ScrollView>
