--- a/android/app/src/main/res/menu/drawer_menu.xml
+++ b/android/app/src/main/res/menu/drawer_menu.xml
@@ -4,7 +4,13 @@
     tools:showIn="navigation_view">
 
     <item
+        android:id="@+id/nav_asearch"
+        android:icon="@drawable/ic_asearch"
+        android:title="@string/advanced_search" />
+
+    <item
         android:id="@+id/nav_exit"
         android:icon="@drawable/ic_exit"
         android:title="@string/exit" />
+
 </menu>
