--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,10 @@
             app:tabMode="scrollable">
 
             <android.support.design.widget.TabItem
-                android:id="@+id/tabHome"
+                android:id="@+id/tabTop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_home" />
+                android:text="@string/tab_top" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabGenre"
