--- a/android/app/src/main/res/layout/fragment_top.xml
+++ b/android/app/src/main/res/layout/fragment_top.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/holo_purple"
     android:scrollbars="none">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/resultsRecyclerView"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/topFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:background="@android:color/darker_gray" />
+        android:layout_margin="16dp"
+        tools:context=".FragmentTop"
+        android:scrollbars="none">
+
+    </FrameLayout>
 
 </LinearLayout>
