--- a/android/app/src/main/res/layout/fragment_message.xml
+++ b/android/app/src/main/res/layout/fragment_message.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NoResultsFragment">
+    tools:context=".MessageFragment">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -24,4 +24,5 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="16sp"
         android:textAlignment="center"/>
+
 </android.support.constraint.ConstraintLayout>
