Insert features list into genre fragment container

--- a/android/app/src/main/res/layout/fragment_features.xml
+++ b/android/app/src/main/res/layout/fragment_features.xml
@@ -1,43 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/holo_orange_dark">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true">
-        <requestFocus />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:padding="4dp"
-            android:text="@string/feature_list"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-
-        <ImageView
-            android:id="@+id/refreshFeatureListButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="4dp"
-            android:src="@drawable/ic_refresh"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:foreground="?android:attr/selectableItemBackground"/>
-
-    </RelativeLayout>
+    android:background="@android:color/holo_orange_dark"
+    android:scrollbars="none">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/featureRecyclerView"
+        android:id="@+id/featuresRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
