Add language list into container

--- a/android/app/src/main/res/layout/fragment_languages_container.xml
+++ b/android/app/src/main/res/layout/fragment_languages_container.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,19 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
-        android:background="@android:color/holo_blue_dark">
+        android:background="@android:color/holo_orange_dark">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:padding="4dp"
-            android:text="@string/platform_list"
+            android:text="@string/language_list"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
         <ImageView
-            android:id="@+id/refreshPlatformsButton"
+            android:id="@+id/refreshLanguagesButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:padding="4dp"
@@ -37,10 +36,10 @@
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/platformsFragmentContainer"
+        android:id="@+id/languagesFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".PlatformsFragmentContainer"
+        tools:context=".LanguagesFragmentContainer"
         android:scrollbars="none">
 
     </FrameLayout>
