Implement image gallery into game details activity

--- a/android/app/src/main/res/layout/activity_game.xml
+++ b/android/app/src/main/res/layout/activity_game.xml
@@ -172,11 +172,26 @@
             android:layout_marginTop="8dp"
             android:text="Desc" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/image_gallery"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+        <FrameLayout
+            android:id="@+id/galleryContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+        </FrameLayout>
+
         <Button
             android:id="@+id/btVisitPage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/visit_webpage"/>
+            android:text="@string/visit_webpage"
+            android:layout_marginTop="16dp"/>
 
     </LinearLayout>
 
