--- a/android/app/src/main/res/layout/activity_results.xml
+++ b/android/app/src/main/res/layout/activity_results.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
-        android:background="@android:color/holo_purple">>
+        android:background="@android:color/holo_purple">
 
         <TextView
             android:id="@+id/results_title"
