--- a/android/app/src/main/res/layout/fragment_search.xml
+++ b/android/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp">
+    android:layout_margin="16dp"
+    android:scrollbars="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,16 +13,15 @@
         tools:context=".SearchFragment"
         android:orientation="vertical">
 
-
         <EditText
             android:id="@+id/search_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
             android:layout_marginBottom="16dp"
-            android:hint="Title"/>
+            android:ems="10"
+            android:hint="Title"
+            android:inputType="textPersonName"
+            android:text="" />
 
         <EditText
             android:id="@+id/search_description"
@@ -35,33 +35,43 @@
 
         <Spinner
             android:id="@+id/search_genre"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:spinnerMode="dialog" />
 
         <Spinner
             android:id="@+id/search_company"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:spinnerMode="dialog" />
 
         <Spinner
             android:id="@+id/search_feature"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:spinnerMode="dialog" />
 
         <Spinner
             android:id="@+id/search_platform"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:spinnerMode="dialog" />
 
         <Spinner
             android:id="@+id/search_language"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:spinnerMode="dialog" />
 
     </LinearLayout>
 
