--- a/android/app/src/main/res/layout/spinner_item.xml
+++ b/android/app/src/main/res/layout/spinner_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/spinner_text_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8sp"
-    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+    android:textAppearance="@android:style/TextAppearance.Widget.EditText"
+    android:textSize="20sp"/>
 
