--- a/android/app/src/main/res/menu/results_menu.xml
+++ b/android/app/src/main/res/menu/results_menu.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh"
-        android:title="Refresh"
+        android:title="@string/refresh"
         app:showAsAction="ifRoom|collapseActionView" />
 
 </menu>
