Create Util class

--- a/android/app/src/main/res/layout/toast_success.xml
+++ b/android/app/src/main/res/layout/toast_success.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_dark"
+    android:background="@android:color/holo_green_dark"
     android:padding="8dp"
-    android:id="@+id/error_toast_root">
+    android:id="@+id/success_toast_root">
 
     <ImageView
-        android:id="@+id/error_toast_image"
+        android:id="@+id/success_toast_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_toast_error"
+        android:src="@drawable/ic_success"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"/>
 
     <TextView
-        android:id="@+id/error_toast_text"
+        android:id="@+id/success_toast_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Demo text"
