--- a/android/app/src/main/res/layout/fragment_genre_container.xml
+++ b/android/app/src/main/res/layout/fragment_genre_container.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
-        android:background="@android:color/holo_blue_dark">
+        android:background="@color/colorGenreTab">
 
         <TextView
             android:layout_width="wrap_content"
