--- a/android/app/src/main/res/layout/fragment_platforms_container.xml
+++ b/android/app/src/main/res/layout/fragment_platforms_container.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
-        android:background="@android:color/holo_blue_dark">
+        android:background="@color/colorPlatformsTab">
 
         <TextView
             android:layout_width="wrap_content"
