--- a/android/app/src/main/res/layout/fragment_recent.xml
+++ b/android/app/src/main/res/layout/fragment_recent.xml
@@ -4,26 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:scrollbars="none"
-    android:background="#FFFFFF">
+    android:scrollbars="none">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
-        android:background="@color/colorLanguagesTab">
+        android:background="@color/colorRecentTab">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:padding="4dp"
-            android:text="@string/language_list"
+            android:text="@string/recent_games"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
         <ImageView
-            android:id="@+id/refreshLanguagesButton"
+            android:id="@+id/refreshRecentGamesButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:padding="4dp"
@@ -36,10 +35,11 @@
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/languagesFragmentContainer"
+        android:id="@+id/recentFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LanguagesFragmentContainer"
+        android:layout_margin="16dp"
+        tools:context=".FragmentRecent"
         android:scrollbars="none">
 
     </FrameLayout>
