--- a/android/app/src/main/res/layout/fragment_top.xml
+++ b/android/app/src/main/res/layout/fragment_top.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
-        android:background="@android:color/holo_red_dark">
+        android:background="@color/colorTopTab">
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
-        tools:context=".FragmentTop"
+        tools:context=".TopFragment"
         android:scrollbars="none">
 
     </FrameLayout>
