--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorRecentTab">#E91E63</color>
+    <color name="colorTopTab">#673AB7</color>
+    <color name="colorGenreTab">#F44336</color>
+    <color name="colorFeaturesTab">#2196F3</color>
+    <color name="colorCompaniesTab">#4CAF50</color>
+    <color name="colorPlatformsTab">#FF8A80</color>
+    <color name="colorLanguagesTab">#D84315</color>
 </resources>
