--- a/android/app/src/main/res/layout/game_item.xml
+++ b/android/app/src/main/res/layout/game_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardElevation="0dp">
 
 
     <LinearLayout
